@@ -8,7 +8,7 @@ EDELIB_NS_USE
 UT_FUNC(XSettingsFuncsTest1, "Test XSETTINGS v_int")
 {
 	XSettingsSetting s1;
-	s1.name = "Test/test";
+	s1.name = (char*)"Test/test";
 	s1.type = XSETTINGS_TYPE_INT;
 	s1.data.v_int = 3;
 
@@ -17,13 +17,13 @@ UT_FUNC(XSettingsFuncsTest1, "Test XSETTINGS v_int")
 	UT_VERIFY( xsettings_setting_equal(&s1, s2) == true );
 
 	XSettingsSetting s3;
-	s3.name = "Test/test";
+	s3.name = (char*)"Test/test";
 	s3.type = XSETTINGS_TYPE_INT;
 	s3.data.v_int = 1;
 
 	UT_VERIFY( xsettings_setting_equal(&s1, &s3) == false );
 
-	s3.name = "Test/test2";
+	s3.name = (char*)"Test/test2";
 	s3.type = XSETTINGS_TYPE_INT;
 	s3.data.v_int = 3;
 
@@ -39,24 +39,24 @@ UT_FUNC(XSettingsFuncsTest1, "Test XSETTINGS v_int")
 UT_FUNC(XSettingsFuncsTest2, "Test XSETTINGS v_string")
 {
 	XSettingsSetting s1;
-	s1.name = "Test/test";
+	s1.name = (char*)"Test/test";
 	s1.type = XSETTINGS_TYPE_STRING;
-	s1.data.v_string = "dummy value";
+	s1.data.v_string = (char*)"dummy value";
 
 	XSettingsSetting* s2 = xsettings_setting_copy(&s1);
 	UT_VERIFY( s2 != NULL );
 	UT_VERIFY( xsettings_setting_equal(&s1, s2) == true );
 
 	XSettingsSetting s3;
-	s3.name = "Test/test";
+	s3.name = (char*)"Test/test";
 	s3.type = XSETTINGS_TYPE_STRING;
-	s3.data.v_string = "dummyvalue";
+	s3.data.v_string = (char*)"dummyvalue";
 
 	UT_VERIFY( xsettings_setting_equal(&s1, &s3) == false );
 
-	s3.name = "Test/test2";
+	s3.name = (char*)"Test/test2";
 	s3.type = XSETTINGS_TYPE_STRING;
-	s3.data.v_string = "dummy value";
+	s3.data.v_string = (char*)"dummy value";
 
 	UT_VERIFY( xsettings_setting_equal(&s1, &s3) == false );
 
@@ -76,7 +76,7 @@ UT_FUNC(XSettingsFuncsTest3, "Test XSETTINGS v_color")
 	col.alpha = 4;
 
 	XSettingsSetting s1;
-	s1.name = "Test/test";
+	s1.name = (char*)"Test/test";
 	s1.type = XSETTINGS_TYPE_COLOR;
 	s1.data.v_color = col;
 
@@ -90,13 +90,13 @@ UT_FUNC(XSettingsFuncsTest3, "Test XSETTINGS v_color")
 	col.alpha = 4;
 
 	XSettingsSetting s3;
-	s3.name = "Test/test";
+	s3.name = (char*)"Test/test";
 	s3.type = XSETTINGS_TYPE_COLOR;
 	s3.data.v_color = col;
 
 	UT_VERIFY( xsettings_setting_equal(&s1, &s3) == false );
 
-	s3.name = "Test/test2";
+	s3.name = (char*)"Test/test2";
 	s3.type = XSETTINGS_TYPE_COLOR;
 	s3.data.v_color = s1.data.v_color;
 
