@@ -1,3 +1,10 @@
+2009-04-12  Sanel <karijes@users.sourceforge.net>
+
+	* all: fixed some warnings generated by gcc's (>=4.3)
+	* edelib.pc.in:
+	* edelib-dbus.pc.in: dump URL key since it is not supported by older
+	pkg-config versions
+
 2009-04-10  Sanel <karijes@users.sourceforge.net>
 
 	* test/UnitTest.h:
